branch updated files

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <h1>This is contact</h1>
     <p>This is new feature</p>
     <p>This is new feature</p>
-    
+
+    <p>Update Branch</p>
 </body>
 </html>
